[gd_scene load_steps=17 format=3 uid="uid://brvun6l03k0hu"]

[ext_resource type="Script" uid="uid://bmc1k8rf2430l" path="res://examples/balatro/balatro_example.gd" id="1_ieake"]
[ext_resource type="Script" uid="uid://f3ybsxom5cmo" path="res://examples/balatro/balatro_card_hand.gd" id="2_grswf"]
[ext_resource type="Script" uid="uid://bisyk4bowdvsf" path="res://addons/simple_cards/deck/manager/card_deck_manager.gd" id="3_hg8is"]
[ext_resource type="Resource" uid="uid://u1x8i453q018" path="res://examples/cards/standard_deck/standard_deck.tres" id="4_2a7na"]
[ext_resource type="Script" uid="uid://d2l8uaoel5whd" path="res://addons/simple_cards/pile/card_pile.gd" id="4_oq12x"]
[ext_resource type="Script" uid="uid://b1s6x4iyt2pps" path="res://addons/simple_cards/hand/shape/premade_shapes/line_shape.gd" id="5_frvav"]
[ext_resource type="Script" uid="uid://bbi8i6vef3f6y" path="res://addons/simple_cards/hand/card_hand.gd" id="5_gjekf"]
[ext_resource type="Script" uid="uid://cgtxv1fnflwfu" path="res://addons/simple_cards/hand/shape/premade_shapes/arc_shape.gd" id="7_m6hid"]
[ext_resource type="Script" uid="uid://cle02hultetj5" path="res://addons/simple_cards/hand/shape/premade_shapes/stack_shape.gd" id="7_oq12x"]
[ext_resource type="Script" uid="uid://qd3kangeiqg" path="res://addons/simple_cards/hand/shape/premade_shapes/grid_shape.gd" id="10_w7u2t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m6hid"]
bg_color = Color(0.16078432, 0.2784314, 0.20784314, 1)
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color(0.32156864, 0.19607843, 0.19215687, 1)

[sub_resource type="Resource" id="Resource_frvav"]
script = ExtResource("7_m6hid")
card_spacing = 70.0
metadata/_custom_type_script = "uid://cgtxv1fnflwfu"

[sub_resource type="Resource" id="Resource_w7u2t"]
script = ExtResource("7_oq12x")
metadata/_custom_type_script = "uid://cle02hultetj5"

[sub_resource type="Resource" id="Resource_asqof"]
script = ExtResource("7_oq12x")
metadata/_custom_type_script = "uid://cle02hultetj5"

[sub_resource type="Resource" id="Resource_m6hid"]
script = ExtResource("5_frvav")
card_spacing = 90.0
metadata/_custom_type_script = "uid://b1s6x4iyt2pps"

[sub_resource type="Resource" id="Resource_gmp31"]
script = ExtResource("10_w7u2t")
num_of_cols = 13
num_of_rows = 4
col_offset = 85.0
row_offset = 117.0
metadata/_custom_type_script = "uid://qd3kangeiqg"

[node name="BalatroExample" type="CanvasLayer"]
script = ExtResource("1_ieake")
deck = ExtResource("4_2a7na")
use_stagger_draw = false

[node name="CardDeckManager" type="Node" parent="." node_paths=PackedStringArray("starting_pile")]
physics_interpolation_mode = 2
script = ExtResource("3_hg8is")
deck = ExtResource("4_2a7na")
starting_pile = NodePath("../MarginContainer/Draw")
metadata/_custom_type_script = "uid://bisyk4bowdvsf"

[node name="BGPanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m6hid")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="GoldButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "Gold"

[node name="SilvButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "Silver"

[node name="NoneButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "None"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="DiscardButton" type="Button" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "Discard"

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "Play"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_bottom = 80

[node name="BalatroHand" type="Control" parent="MarginContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
script = ExtResource("2_grswf")
shape = SubResource("Resource_frvav")
max_hand_size = 7
metadata/_custom_type_script = "uid://bbi8i6vef3f6y"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 8

[node name="SortSuitButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
text = "Sort by Suit"

[node name="SortValueButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
text = "Sort by Value"

[node name="Draw" type="Control" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
script = ExtResource("4_oq12x")
shape = SubResource("Resource_w7u2t")
show_cards = true
metadata/_custom_type_script = "uid://d2l8uaoel5whd"

[node name="Discard" type="Control" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
script = ExtResource("4_oq12x")
shape = SubResource("Resource_asqof")
show_cards = true
face_up = true
metadata/_custom_type_script = "uid://d2l8uaoel5whd"

[node name="PlayedHand" type="Control" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("5_gjekf")
shape = SubResource("Resource_m6hid")
enable_reordering = false
metadata/_custom_type_script = "uid://bbi8i6vef3f6y"

[node name="PreviewHand" type="Control" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("5_gjekf")
shape = SubResource("Resource_gmp31")
metadata/_custom_type_script = "uid://bbi8i6vef3f6y"

[node name="PreviewDraw" type="Button" parent="MarginContainer"]
unique_name_in_owner = true
z_index = 999
custom_minimum_size = Vector2(80, 112)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Preview
Draw"

[node name="PreviewDiscard" type="Button" parent="MarginContainer"]
unique_name_in_owner = true
z_index = 999
custom_minimum_size = Vector2(80, 112)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Preview
Discard"
